--- a/progetti.html
+++ b/progetti.html
@@ -42,13 +42,13 @@
 					<a href="progetti.html">Progetti <i class="fa fa-caret-down"></i></a>
 				</div>
 	    		<div class="subnav-content"> 
-					<a class="navbarlink" href="/progetti/oca.html">Gioco dell'Oca</a> 
-					<a class="navbarlink" href="/progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="/progetti/ammo2.html">Ammo2</a>
-					<a class="navbarlink" href="/progetti/aq.html">Adventure Quest</a>
+					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
+					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
+					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="progetti/aq.html">Adventure Quest</a>
 				</div>
       		</div>
-	  		<a class="navbarlink" href ="#notizie">Notizie</a> <a class="navbarlink" href ="#fulcrum">Fulcrum</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a>		
+	  		<a class="navbarlink" href ="#notizie">Notizie</a> <a class="navbarlink" href ="#fulcrum">Fulcrum</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a> <a class="navbarlink" href ="index.html">Home</a>		
 		</div>
 	</div>
 <!-- InstanceBeginEditable name="body" -->
