--- a/progetti/ammo2.html
+++ b/progetti/ammo2.html
@@ -7,7 +7,7 @@
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Fulcrum Associazione Culturale - ProjectTemplate</title>
 <!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceBeginEditable name="head" -->	
 <!-- InstanceEndEditable -->
 <link href="../css/template.css" rel="stylesheet" type="text/css">
 <link href="../css/navbar.css" rel="stylesheet" type="text/css">
@@ -39,16 +39,16 @@
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
-					<a href="progetti.html">Progetti <i class="fa fa-caret-down"></i></a>
+					<a href="../progetti.html">Progetti <i class="fa fa-caret-down"></i></a>
 				</div>
 	    		<div class="subnav-content"> 
-					<a class="navbarlink" href="/progetti/oca.html">Gioco dell'Oca</a> 
-					<a class="navbarlink" href="/progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="/progetti/ammo2.html">Ammo2</a>
-					<a class="navbarlink" href="/progetti/aq.html">Adventure Quest</a>
+					<a class="navbarlink" href="oca.html">Gioco dell'Oca</a> 
+					<a class="navbarlink" href="guida.html">Guida alla Frontiera Galattica</a> 
+					<a class="navbarlink" href="ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="aq.html">Adventure Quest</a>
 				</div>
       		</div>
-	  		<a class="navbarlink" href ="#notizie">Notizie</a> <a class="navbarlink" href ="#fulcrum">Fulcrum</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a>		
+	  		<a class="navbarlink" href ="#notizie">Notizie</a> <a class="navbarlink" href ="#fulcrum">Fulcrum</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a> <a class="navbarlink" href ="../index.html">Home</a>		
 		</div>
 	</div>
 <!-- InstanceBeginEditable name="body" -->
@@ -77,11 +77,13 @@
                   	</div>
 					<section class="news">
 						<!-- InstanceBeginEditable name="news" -->
-						<time class="newsdate">01/01/2019</time>
-						<h3>Project Title</h3>
-						<img src="../images/315x150.png">
-						<h4>News Title</h4>
-						<p>Lorem ipsum</p>
+						<div class="newstop">
+						  <time class="newsdate">01/01/2019</time>
+						  <h3>Project Title</h3>
+					    </div>
+                        <div><img src="../images/315x150.png"></div>
+<h4>News Title</h4>
+					    <p>Lorem ipsum</p>
 						<!-- InstanceEndEditable -->
 					</section>
 				</div>
