--- a/progetti/guida.html
+++ b/progetti/guida.html
@@ -7,9 +7,7 @@
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Fulcrum Associazione Culturale - ProjectTemplate</title>
 <!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" -->
-<link href="/css/projecttemplate.css" rel="stylesheet" type="text/css">
-
+<!-- InstanceBeginEditable name="head" -->	
 <!-- InstanceEndEditable -->
 <link href="../css/template.css" rel="stylesheet" type="text/css">
 <link href="../css/navbar.css" rel="stylesheet" type="text/css">
@@ -41,16 +39,16 @@
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
-					<a href="progetti.html">Progetti <i class="fa fa-caret-down"></i></a>
+					<a href="../progetti.html">Progetti <i class="fa fa-caret-down"></i></a>
 				</div>
 	    		<div class="subnav-content"> 
-					<a class="navbarlink" href="/progetti/oca.html">Gioco dell'Oca</a> 
-					<a class="navbarlink" href="/progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="/progetti/ammo2.html">Ammo2</a>
-					<a class="navbarlink" href="/progetti/aq.html">Adventure Quest</a>
+					<a class="navbarlink" href="oca.html">Gioco dell'Oca</a> 
+					<a class="navbarlink" href="guida.html">Guida alla Frontiera Galattica</a> 
+					<a class="navbarlink" href="ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="aq.html">Adventure Quest</a>
 				</div>
       		</div>
-	  		<a class="navbarlink" href ="#notizie">Notizie</a> <a class="navbarlink" href ="#fulcrum">Fulcrum</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a>		
+	  		<a class="navbarlink" href ="#notizie">Notizie</a> <a class="navbarlink" href ="#fulcrum">Fulcrum</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a> <a class="navbarlink" href ="../index.html">Home</a>		
 		</div>
 	</div>
 <!-- InstanceBeginEditable name="body" -->
@@ -64,14 +62,14 @@
 		  		<div class="contentbox">
 		  	    	<h1 class="title">
 		  	      	<!-- InstanceBeginEditable name="title" -->
-				Titolo
-			<!-- InstanceEndEditable -->
+		  	        	Titolo
+	  	          	<!-- InstanceEndEditable -->
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
-			<img class="imgcontent" src="/images/1100x300.png" alt="">
-			<p class="content"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-			</p>
-			<!-- InstanceEndEditable -->
+		  	      
+		  	        <p class="content"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+	  	        	</p>
+	  	        	<!-- InstanceEndEditable -->
 		  	    </div>
 				<div class="sidebar">
                   	<div class="flag">
@@ -79,7 +77,13 @@
                   	</div>
 					<section class="news">
 						<!-- InstanceBeginEditable name="news" -->
-							
+						<div class="newstop">
+						  <time class="newsdate">01/01/2019</time>
+						  <h3>Project Title</h3>
+					    </div>
+                        <div><img src="../images/315x150.png"></div>
+<h4>News Title</h4>
+					    <p>Lorem ipsum</p>
 						<!-- InstanceEndEditable -->
 					</section>
 				</div>
