--- a/contactform.html
+++ b/contactform.html
@@ -5,10 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Fulcrum Associazione Culturale - Progetti</title>
+<title>Fulcrum Associazione Culturale - Contatti</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
-<link href="css/progetti.css" rel="stylesheet" type="text/css">
+<link href="css/form.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <link href="css/template.css" rel="stylesheet" type="text/css">
 <link href="css/navbar.css" rel="stylesheet" type="text/css">
@@ -51,30 +51,73 @@
 	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="servizi.html">Servizi</a> <a class="navbarlink" href ="faq.html">FAQ</a> <a class="navbarlink" href ="contactform.html">Contatti</a> <a class="navbarlink" href ="index.html">Home</a>		
 		</div>
 	</div>
-<!-- InstanceBeginEditable name="body" -->
+<!-- InstanceBeginEditable name="body" -->	
 <!-- InstanceEndEditable -->
 	<div class="container">
 		<!-- InstanceBeginEditable name="content" -->
-		<section class="progetti">
-			<article>
-				<img src="images/progetti/guidap.jpg" alt="">
-				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  </div>
-			</article> 
-			<article>
-				<img src="images/progetti/bergaminip.jpg" alt="">
-				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  </div>
-			</article> 
-			<article>
-				<img src="images/progetti/aqp.jpg" alt="">
-				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  </div>
-			</article> 
-		</section>		
+		<section class="form">
+			<form name="contactform" method="post" action="send_form_email.php">
+				<table id="table">
+					<tr>
+ 						<td class="leftcell">
+  							<label for="first_name">Nome *</label>
+ 						</td>
+ 						<td><input  type="text" name="first_name" maxlength="50" size="30"></td>
+					</tr>
+					<tr>
+ 						<td class="leftcell">
+  							<label for="last_name">Cognome *</label>
+ 						</td>
+ 						<td>
+  							<input  type="text" name="last_name" maxlength="50" size="30">
+ 						</td>
+					</tr>
+					<tr>
+ 						<td class="leftcell">
+  							<label for="email">Inidirizzo E-Mail *</label>
+ 						</td>
+ 						<td>
+  							<input  type="text" name="email" maxlength="80" size="30">
+ 						</td>
+					</tr>
+					<tr>
+ 						<td class="leftcell">
+  							<label for="telephone">Numero di Telefono</label>
+ 						</td>
+ 						<td>
+  							<input  type="text" name="telephone" maxlength="30" size="30">
+ 						</td>
+					</tr>
+					<tr>
+ 						<td class="leftcell">
+  							<label for="town">Città</label>
+ 						</td>
+ 						<td>
+  							<input  type="text" name="telephone" maxlength="30" size="30">
+ 						</td>
+					</tr>
+					<tr>
+ 						<td class="leftcell">
+  							<label for="comments">Messaggio *</label>
+ 						</td>
+ 						<td>
+  							<textarea class="comments" name="comments" maxlength="1000"></textarea>
+ 						</td>
+					</tr>
+					<tr>
+						<td colspan="2" class="chkcell">
+  							<input type="checkbox"  name="privacy"> 						
+  							<label for="comments">Acconsento al trattamento dei dati personali secondo l'art. 13 del D.lgs. n. 196/2003. *</label>
+ 						</td> 						
+					</tr>
+					<tr>
+ 						<td colspan="2" style="text-align:center">
+  							<input class="submitbtn" type="submit" value="Invia!">
+ 						</td>
+					</tr>
+				</table>
+			</form>
+		</section>
 		<!-- InstanceEndEditable -->
 		<section class="footer_banner" id="contact">
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
