--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<a class="navbarlink" href="progetti/aq.html">Adventure Quest</a>
 				</div>
       		</div>
-	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a> <a class="navbarlink" href ="">Home</a>		
+	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="servizi.html">Servizi</a> <a class="navbarlink" href ="faq.html">FAQ</a> <a class="navbarlink" href ="contactform.html">Contatti</a> <a class="navbarlink" href ="">Home</a>		
 		</div>
 	</div>
 <!-- Main Container -->
