--- a/servizi.html
+++ b/servizi.html
@@ -5,10 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Fulcrum Associazione Culturale - Progetti</title>
+<title>Fulcrum Associazione Culturale - Servizi</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
-<link href="css/progetti.css" rel="stylesheet" type="text/css">
+<link href="css/servizi.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
 <link href="css/template.css" rel="stylesheet" type="text/css">
 <link href="css/navbar.css" rel="stylesheet" type="text/css">
@@ -55,26 +55,19 @@
 <!-- InstanceEndEditable -->
 	<div class="container">
 		<!-- InstanceBeginEditable name="content" -->
-		<section class="progetti">
-			<article>
-				<img src="images/progetti/guidap.jpg" alt="">
-				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  </div>
-			</article> 
-			<article>
-				<img src="images/progetti/bergaminip.jpg" alt="">
-				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  </div>
-			</article> 
-			<article>
-				<img src="images/progetti/aqp.jpg" alt="">
-				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  </div>
-			</article> 
-		</section>		
+		<section class="servizi">
+			<div>
+				<h1>L'Associazione Culturale Fulcrum ruota attorno ai suoi servizi.</h1>				
+				<div class="servizio">
+					<h2>Servizio 1:</h2>
+					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>					
+				</div>
+				<div class="servizio">
+					<h2>Servizio 2:</h2>
+					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>					
+				</div>
+			</div>
+		</section>
 		<!-- InstanceEndEditable -->
 		<section class="footer_banner" id="contact">
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
